# FractalViewer

./: CMakeLists.txt  compile.sh  index.html  package-lock.json  package.json  run.sh  test.c  vite.config.js
assets/: BurningShipFractalView-BWxVwsOY.js  BurningShipFractalView-C2Q2VQzX.js  BurningShipFractalView-ChT78QWS.js  BurningShipFractalView-DLujqEaq.js  BurningShipFractalView-DgSBzYS5.js  BurningShipFractalView-DuhhXiGD.js  BurningShipFractalView-apl5Meqo.js  BurningShipFractalView-r0U5ESq6.js  BurningShipFractalView-ylsogC5d.js  FullScreenShader-BlXPsq2T.js  FullScreenShader-BqJyaBy9.js  FullScreenShader-CnCNYiP0.css  FullScreenShader-Cu2pJoy1.js  FullScreenShader-DPkDf3YN.css  FullScreenShader-D_IX0DWm.css  FullScreenShader-DgaGeG_r.js  FullScreenShader-d2qQdIUV.js  FullScreenShader-iz5l4Dsw.js  FullScreenShader-uZ4b5job.js  FullScreenShader-x3R6pP4u.js  FullScreenShader-zdvPIgFQ.js  JuliaFractalView-3aairhE4.css  JuliaFractalView-7RVE9AqF.js  JuliaFractalView-7iYOAEr6.js  JuliaFractalView-BN_aU0mJ.css  JuliaFractalView-BdsiXa4c.js  JuliaFractalView-Bej94J5n.js  JuliaFractalView-Bggf1Owc.js  JuliaFractalView-BsyJm5vQ.js  JuliaFractalView-CcljnTxA.js  JuliaFractalView-DM1nguwF.js  JuliaFractalView-IkaMCFsv.js  JuliaFractalView-QlIs63G-.css  JuliaFractalView-mnYtTGTt.css  MandelBoxFractalView-BSVB0Dzd.js  MandelBoxFractalView-C__DWG8Q.js  MandelBoxFractalView-D-vtRmvi.js  MandelBoxFractalView-lxFTUt2k.js  MandelbrotFractalView-B7swTiht.js  MandelbrotFractalView-BcZMTxB_.js  (+26 more)
dependencies/glad/: glad.h
src/: App.vue  glad.c  main.cpp
src/router/: index.js
(+13 files in other folders)
